# webrtc

./: .gitmodules  Cargo.toml  Dockerfile  README.md
docs/: architecture.md  protocol.md
src/: handlers.rs  main.rs  portal.rs  webrtc.rs
src/webrtc/: callbacks.rs  clipboard.rs  gstreamer.rs  input.rs  mod.rs
static/: index.html  script.js
web-app/: index.html  package-lock.json  package.json  vite.config.ts
web-app/src/: App.tsx
web-app/src/components/: ChatPanel.tsx  ClipboardSimulator.tsx  ControlPanel.tsx  LogViewer.tsx  VideoDisplay.tsx
web-app/src/hooks/: useWebRTC.ts
web-app/src/types/: InputEvent.ts
web-app/src/utils/: evdev.ts
